Some work on clustering, found a mayor bug
There was a bug in the segementation code, that casued a split at the wrong position

--- a/Code/Split/Cluster.ipynb
+++ b/Code/Split/Cluster.ipynb
@@ -459,7 +459,7 @@
     "    p_col = np.hstack([np.nonzero(s_c),np.nonzero(~s_c)]).reshape(-1)\n",
     "    p_row = np.hstack([np.nonzero(~s_r),np.nonzero(s_r)]).reshape(-1)\n",
     "    i_in =np.count_nonzero(s_c)\n",
-    "    i_out=np.count_nonzero(s_r)\n",
+    "    i_out=np.count_nonzero(~s_r)\n",
     "    return p_col,p_row,i_in,i_out\n",
     "\n",
     "def permute_stage(stage,p_col,p_row):\n",
@@ -559,11 +559,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dims_in =  np.array([4, 4, 4, 4])*6\n",
-    "dims_out = np.array([4, 4, 4, 4])*6\n",
+    "#dims_in =  np.array([4, 4, 4, 4])*6\n",
+    "#dims_out = np.array([4, 4, 4, 4])*6\n",
     "\n",
-    "#dims_in =  np.array([9, 7, 7, 9])*3\n",
-    "#dims_out = np.array([7, 9, 9, 7])*3\n",
+    "dims_in =  np.array([9, 7, 7, 9])*3\n",
+    "dims_out = np.array([7, 9, 9, 7])*3\n",
     "\n",
     "\n",
     "n = 2\n",
@@ -723,7 +723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gamma = 1e6\n",
+    "gamma = 1e3\n",
     "sys = Split.initial_sigmas_mixed(T)\n",
     "Ps_col,Ps_row,reports = identification_split_clustering(sys,2)\n",
     "P_col = Ps_col[-1]\n",
