Changes to Experiments chapter

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -580,6 +580,15 @@ date = {2019-03-21}
 	file = {arXiv Fulltext PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/PANLLL86/Knuth - 1993 - Johann Faulhaber and sums of powers.pdf:application/pdf;arXiv.org Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/G34Y9M2U/9207222.html:text/html},
 }
 
+@software{kissel_time_2022,
+	title = {Time Varying Systems and Computation ({TVSC}) Library},
+	rights = {{MIT}},
+	url = {https://github.com/MatthiasKi/tvsclib},
+	abstract = {Time varying systems computation library},
+	author = {Kissel, Matthias and Stümke, Daniel and Nüßlein, Stephan},
+	date = {2022-04-14},
+}
+
 @article{recht_guaranteed_2010,
 	title = {Guaranteed Minimum-Rank Solutions of Linear Matrix Equations via Nuclear Norm Minimization},
 	volume = {52},
@@ -623,4 +632,21 @@ date = {2019-03-21}
 	date = {2021-01},
 	doi = {10.1137/1.9781611976632},
 	keywords = {convergence theory, direct method, iteration method, Krylov subspace, linear system, matrix decomposition, matrix splitting, nonnegative matrix theory, numerical range, preconditioning, saddle-point problem},
+}
+
+@article{higham_spectral_2007,
+	title = {Spectral clustering and its use in bioinformatics},
+	volume = {204},
+	issn = {0377-0427},
+	doi = {10.1016/j.cam.2006.04.026},
+	series = {Special issue dedicated to Professor Shinnosuke Oharu on the occasion of his 65th birthday},
+	abstract = {We formulate a discrete optimization problem that leads to a simple and informative derivation of a widely used class of spectral clustering algorithms. Regarding the algorithms as attempting to bi-partition a weighted graph with N vertices, our derivation indicates that they are inherently tuned to tolerate all partitions into two non-empty sets, independently of the cardinality of the two sets. This approach also helps to explain the difference in behaviour observed between methods based on the unnormalized and normalized graph Laplacian. We also give a direct explanation of why Laplacian eigenvectors beyond the Fiedler vector may contain fine-detail information of relevance to clustering. We show numerical results on synthetic data to support the analysis. Further, we provide examples where normalized and unnormalized spectral clustering is applied to microarray data—here the graph summarizes similarity of gene activity across different tissue samples, and accurate clustering of samples is a key task in bioinformatics.},
+	pages = {25--37},
+	number = {1},
+	journaltitle = {Journal of Computational and Applied Mathematics},
+	shortjournal = {Journal of Computational and Applied Mathematics},
+	author = {Higham, Desmond J. and Kalna, Gabriela and Kibble, Milla},
+	date = {2007-07-01},
+	langid = {english},
+	keywords = {Balancing threshold, Fiedler vector, Gene expression, Graph Laplacian, Maximum likelihood, Microarray, Partitioning, Random graph, Rayleigh–Ritz Theorem, Scaling},
 }
