--- a/Thesis/masterthesis.tex
+++ b/Thesis/masterthesis.tex
@@ -73,6 +73,7 @@
 \DeclareMathOperator{\range}{range}
 \DeclareMathOperator{\argmin}{argmin}
 \DeclareMathOperator{\f}{f}
+\DeclareMathOperator{\length}{len}
 
 
 %define symbols
@@ -80,6 +81,7 @@
 \newcommand{\Ob}{\mathcal{O}} %Observability operator 
 \newcommand{\eye}{I} %identity matrix
 \newcommand{\bigO}{O}
+\newcommand{\partition}{\mathcal{P}}
 
 \newcommand{\sys}{\Sigma}
 
@@ -739,7 +741,7 @@ The error can be bound to two times the cut singular values \cite{lall_error-bou
 A detailed discussion of approxiamtions is given in
 \cite{antoulas_approximation_2005}.
 
-\chapter{Methods} 
+\chapter{Methods}\ref{chap:methods}
 In this section the methods and algorithms derived in this thesis are presented.
 First I explain the techniques to calculate the singular values of the Hankel matrices and how to use them to approximate matrices in Section\,\ref{sec:approx}.
 The cost to compute a matrix vector product using a Time Varying system is explained in Section\,\ref{sec:cost} and used in Section\,\ref{sec:Choose_K} to choose a number of stages. 
@@ -1698,13 +1700,6 @@ to the matrix $C_{k+1}$.
 The pseudocode can be found in Algorithm\,\ref{alg:move_up}.
 
 \FloatBarrier
-
-\subsection{Combine and Split stages}
-It is also possible to split and combine stages. In \cite{chandrasekaran_fast_2005} an algorithm for this purpose is given.
-\todo[inline]{The same algorithm is given in the other paper, but we could give a more detailed explaination on the combination.
-Also I think the derivation of the splitting is clearer than the derivation given in the paper
-I might add it if i need it}
-\FloatBarrier
 \subsection{Computing Hankel Singular Values when Moving Boundaries}\label{subsec:move_sig}
 In this section the ideas from Section\,\ref{sec:approx} are used to calculate the singular values for a moved system.
 The main idea is that this algorithm iterates over the different stages and moves them if needed.
@@ -1850,7 +1845,7 @@ This results in the Algorithm\,\ref{alg:move_right_sig}.
 		\State $\begin{bmatrix}
 		A_{k} \\ B_{k} 
 		\end{bmatrix}  \gets U \diag(\sigma)$	
-		\State $D_v \gets \begin{bmatrix}
+		\State $D_ki \gets \begin{bmatrix}
 		D_k&d_{\text{new}}
 		\end{bmatrix}$
 	%\EndFor
@@ -1998,7 +1993,7 @@ This objective function does not minimize the approximation error, but \todo{equ
 %\todo[inline]{something on the objective functions}
 %\todo[inline]{maybee some example}
 
-\section{Permutations}
+\section{Permutations}\label{sec:permutation}
 In this section the matrix is represented as a an permutation of the input $\Pi_i$ a Time varying system $\Sigma$ and a permutation of the output.
 This means that the matrix $A$ is represented as the product
 \begin{equation}
@@ -2210,7 +2205,7 @@ If we have a balanced system $\Sigma_{[A,B,C,D]}$ the matrices $\tilde{A},\tilde
 \begin{align}
 	A_k &= \Sigma_{k+1}^{1/2} \tilde{A}_k \Sigma_k^{1/2} &
 	B_k &= \Sigma_{k+1}^{1/2} \tilde{B}_k \\
-	C_k &= \tilde{A}_k \Sigma_k^{1/2} & 
+	C_k &= \tilde{C}_k \Sigma_k^{1/2} & 
 	D&=\tilde{D}
 	.
 \end{align}\label{eq:stages_sigma}
@@ -2319,8 +2314,8 @@ We need to group the rows and columns of the matrix
 \begin{equation}
 X=
 \begin{bmatrix}
-	0   &B_k^* & A_k^*\\
-	C_k & D_k & C_k^*\\
+	0   &F_k^* & E_k^*\\
+	C_k & D_k & G_k^*\\
 	A_k & B_k & 0
 \end{bmatrix}
 .
@@ -2333,10 +2328,14 @@ Then we can segment the resulting matrix according to
 \input{diagrams/Moves/Split_X.pgf}
 
 The input $u_k$ and the output $y_k$ are also permuted accordingly.
+This partitions the input $u_k$ in the two sets $u_\alpha$ and $u_\beta$.
+Analogously the output $y_k$ is partitioned in the two sets $y_\alpha$ and $y_\beta$.
+We denote all partitions that partition $u_k$ into two sets as $\partition(u_k)$
+and $\partition(y_k)$ for $y_k$ accordingly.
 Here $\tilde{H_\beta}$ and $\tilde{H_\alpha^*}$ have the same singular values as the Hankel matrices $H_\beta$ and $H_\alpha^*$.
 These singular values determine the state dimensions $d_\beta$ and $d_\alpha^*$.
 When we represent a system we want both of them to be minimal.
-Therefore we want to optimize the singular values of $\tilde{H_\beta}$ and $\tilde{H_\alpha^*}$. 
+Therefore we want to optimize in the singular values of $\tilde{H_\beta}$ and $\tilde{H_\alpha^*}$ some sense. 
 The properties of the remaining parts of the matrix $X$ are nor relevant, as they do not influence the state dimensions.
 
 We can use two strategies to reduce the state dimensions.
@@ -2349,16 +2348,16 @@ This is equivalent to minimizing the Frobenius norms of $\tilde{H_\beta}$ and $\
 
 \paragraph{Rank reduction}
 Reducing the rank of the Hankel matrices is equivalent to reducing the dimensions of the range of $H$.
-We could also reduce the range of range of $H^\top$.
+We could also reduce the range of $H^\top$.
 For a matrix $A\in \mathbb{R}^{m\times n}$ these are all equivalent as 
 \begin{equation}
 \rank(A) = \dim(\range(A)) = \dim(\range(A^\top))
 \end{equation}
-This makes it possible to reduce the rank by choosing the columns of $X$ such that 
+This makes it possible to reduce the rank by partition the input $u_k$ such that 
 \begin{equation}
 	\dim\range(\tilde{H_\beta}) + \dim\range(\tilde{H_\alpha^*})
 \end{equation}
-is reduced. At the same time we have to choose the rows such that 
+is reduced. At the same time we have to partition the outputs $y_k$ such that 
 \begin{equation}
 \dim\range(\tilde{H^\top_\beta}) + \dim\range(\tilde{H_\alpha^{*\top}})
 \end{equation}
@@ -2369,8 +2368,8 @@ Both problems influence each other.
 %\todo[inline]{Here we consider the rows as nodes that are connected by edges. Analogous we consider the }
 %Here we consider the rows as nodes that are connected by edges. Analogous we consider the columns as nodes connected by edges.
 %The clustering of the rows influences the weight matrices for the columns and vice versa.
-As we want to reduce the dimension of the range we want to make sure that the angle between the columns of $\tilde{H_\beta}$ and $\tilde{H_\alpha^*}$ are small.
-Therefore we want to reduce the angle between the columns.
+As we want to reduce the dimension of the range we want to make sure that the angle between the columns of the Hankel matrices are small. %$\tilde{H_\beta}$ and $\tilde{H_\alpha^*}$ are small.
+%Therefore we want to reduce the angle between the columns.
 For this the function 
 \begin{equation}
 	\chi(u,v) =  1-\sin(\sphericalangle(u,v)) =1-\frac{|u^\top v|}{\|u\|_2\|v\|_2}
@@ -2386,7 +2385,7 @@ If $u$ and $v$ are colinear $\chi(u,v) = 0$.
 \end{proof}
 if $u$ and $v$ are orthogonal $\chi(u,v) = 1$.
 \begin{proof}
-	If $u$ and $v$ are colinear then $u^\top v =0$. Therefore
+	If $u$ and $v$ are orthogonal then $u^\top v =0$. Therefore
 	\begin{equation}
 	\chi(u,v) = 1-\frac{0}{\|u\|_2\|v\|_2}= 1
 	\end{equation}
@@ -2401,7 +2400,7 @@ This gives the objective function
 	+\sum_{u,v \text{ collumns of } \tilde{H}_\alpha^*}\!\!\!\!\!\!\chi(u,v)
 	.
 \end{equation}
-An analogous derivation results in the objective function for the tows
+An analogous derivation results in the objective function for the rows
 \begin{equation}
 	f_{row} = \sum_{u,v \text{ rows of }  \tilde{H}_\beta}\!\!\!\chi(u,v)
 	+\sum_{u,v \text{ rows of }  \tilde{H}_\alpha^*}\!\!\!\chi(u,v)
@@ -2409,13 +2408,47 @@ An analogous derivation results in the objective function for the tows
 \end{equation}
 This results in the two coupled optimizations problems
 \begin{equation}
-	\argmin_{\text{segemnt columns}} f_{col}
+	\underset{(u_\alpha, u_\beta) \in \partition(u_k)}{\arg\min} f_{col} + \gamma_u
 \end{equation}
 and 
 \begin{equation}
-	\argmin_{\text{segemnt rows}} f_{row}
+	\underset{(y_\alpha, y_\beta) \in \partition(y_k)}{\arg\min} f_{row} + \gamma_y
+	.
 \end{equation}
-\todo{evtl Aus Mengelehre irgendeine notation für alle mengen die menge in zwei teile teilt}
+Here $\gamma_y$ and $\gamma_u$ are the regularization terms
+\begin{equation}
+\gamma_u =\gamma
+\left(\frac{\length(u_\alpha)}{\length(u_k)}-0.5\right)^2
+\end{equation}
+and
+\begin{equation}
+\gamma_u =\gamma 
+\left(\frac{\length(y_\alpha)}{\length(y_k)}-0.5\right)^2
+.
+\end{equation}
+To solve this optimization problem, I use an iterative algorithm.
+At every iteration the algorithm computes for every input in $u_\alpha$ how much the objective function $f_{col}$ would change if we would move the input to $u_\beta$.
+The input with the smallest value is moved to $u_\beta$, if it is negative.
+Analogously the same is done for the inputs in $u_\beta$.
+If there is neither a negative value for  $u_\alpha$ nor a negative value for $u_\beta$, the inputs with the smallest values are flipped.
+Simultaneously the same is done with the outputs with the objective function $f_row$.
+
+The initial partition of $u_k$ is obtained using spectral clustering.
+For this the columns of $X$ are represented by nodes connected by weighted edges.
+The weight between the columns $c_i$ and $c_j$ is  
+\begin{equation}
+	w_{i,j}=
+	\begin{cases}
+	|c_i^\top c_j| & \text{if } i\neq j\\
+	0  & \text{if } i=j\\
+	\end{cases}
+\end{equation}
+The spectral clustering is done with a normalized Laplacian as described in \cite{higham_spectral_2007}.
+The resulting segmentation also includes additional columns that do not correspond to input, but are already fixed.
+If more than halve of these column have been grouped into the incorrectly the segmentation is flipped.
+
+Analogously the initial partition of $y_k$ is computed.
+
 
 \paragraph{Frobenius norm reduction}
 Next we consider the case where the Hankel matrices have close to full rank.
@@ -2423,39 +2456,124 @@ Here balanced truncation is used to approximate the system.
 To reduce the number of states, the number of singular values grater than some threshold have to be reduced.
 To achieve this I reduce the sum of the squared singular values.
 This is equivalent to the squared frobenius norm as $\|H\|_\text{F}^2 = \sum \sigma_i^2$ \cite[p.~67]{bai_matrix_2021}. \todo{This was already used in this thesis. I think it is easier if i state it a second time here instead of giving a }
-As $\|A\|_\text{F}^2 = \sum_{i=1}^{m}\sum_{j=1}^{n} a_{ij}^2$ this results in the problem of partitioning the inputs and outputs such that the sum over the squared entries of $\tilde{H}_\beta$ and $\tilde{H}_\alpha^*$ is minimal.
-As $\|A\|_\text{F}^2 \approx \text{size}(A)$ holds for the weight matrices tested, this would  to minimizing the size of $\tilde{H}_\beta$ and $\tilde{H}_\alpha^*$.
-\todo[inline]{not really correct... get some formal definition
-To avoid the trivial solutions, where $\tilde{H}_\beta$ and $\tilde{H}_\alpha^*$ are empty the objective function 
+Because $\|A\|_\text{F}^2 = \sum_{i=1}^{m}\sum_{j=1}^{n} a_{ij}^2$ this results in the problem of partitioning the inputs and outputs such that the sum over the squared entries of $\tilde{H}_\beta$ and $\tilde{H}_\alpha^*$ is reduced.
+As $\|H\|_\text{F}^2 \approx \text{size}(H)$ for the weight matrices tested, this would be equivalent to minimizing the size of $H_\beta$ and $H_\alpha^*$.
+%\textcolor{blue}{
+%Therefore the norms are scaled with $\text{size}(H)^{-1}$.
+%}
+To avoid the trivial solution, where $u_\alpha$ and $y_\alpha$ or $u_\beta$  and $y_\beta$ are empty a regularization term $\gamma$ is added.
+
+This results in the discrete optimization problems
 \begin{equation}
-	f_{\text{frob}} = \frac{\|\tilde{H}_\beta\|_\text{F}}{\text{size}(\tilde{H}_\beta)}
-	+
-	\frac{\|\tilde{H}_\alpha^*\|_\text{F}}{\text{size}(\tilde{H}_\alpha^*)} 
+	(u_\alpha,u_\beta),(y_\alpha,y_\beta) = \underset{\substack{(u_\alpha, u_\beta) \in \partition(u_k)\\(y_\alpha, y_\beta) \in \partition(y_k)
+		}}{\arg\min} \|\tilde{H}_\beta\|_\text{F}^2 + \|\tilde{H}_\alpha^*\|_\text{F}^2 +\gamma
 \end{equation}
-is used.
-}
+%\textcolor{blue}{
+%\begin{equation}
+%(u_\alpha,u_\beta),(y_\alpha,y_\beta) = \underset{\substack{(u_\alpha, u_\beta) \in \mathcal{P}(u_k)\\(y_\alpha, y_\beta) \in \mathcal{P}(y_k)
+%}}{\arg\min} \frac{\|H_\beta\|_\text{F}^2}{\text{size}(H_\beta)} + \frac{\|H_\alpha^*\|_\text{F}^2}{\text{size}(H_\alpha^*)} +\gamma
+%\end{equation}
+%}
+Here I use the regularization term
+\begin{equation}
+	\gamma =\gamma_r \frac{\length(u_k)+\length(y_k)}{2}%\|D\|_{\text{max}}
+	\left[ \left(\frac{\length(u_\alpha)}{\length(u_k)}-0.5\right)^2
+	+
+	\left(\frac{\length(y_\alpha)}{\length(y_k)}-0.5\right)^2
+	\right]
+\end{equation}
+%Here the regularization parameter $\gamma_n$ is set such that the function ...
+To solve this optimization problem, I use the same iterative algorithm as used for the rank reduction.
+At every iteration the algorithm computes for every input in $u_\alpha$ how much the objective function would change if we would move the input to $u_\beta$.
+The input with the smallest value is moved to $u_\beta$, if it is negative.
+Analogously the same is done for the inputs in $u_\beta$.
+If no value is negative for both sets, the inputs with the smallest values are flipped.
+The same is done with the outputs.
+The algorithm terminates as soon as the algorithm detects an loop.
+
+
+For larger matrices multiple inputs and outputs can be flipped at every iteration to speed up the algorithm.
+To additionally speed up the algorithm a matrix $W$ is computed, containing the matrix $D_k^{\bullet^2}$ with the squared entries of $D$.
+Using this approach, means that the squares of the entries only have to be computed once.
+Additionally the size of the matrix $W$ can be reduced by replacing the matrices $A_k$ and $E_k$ with their Frobeniusnorms $a_k$ and $e_k$.
+The matrices $B_k$ and $F_k^*$ are replaced by their column-wise vector-2-norm $b_k^\top$ and $f_k^top$.
+The matrices $C_k$ and $G_k$ are replaced by their row wise vector-2-norm $c_k$ and $g_k$.
+This results in the matrix
+\begin{equation}
+	W = 
+	\begin{bmatrix}
+	0   &f_k^\top & e_k\\
+	c_k & D_k^{\bullet^2} & g_k\\
+	a_k & b_k^\top & 0
+	\end{bmatrix}
+	.
+\end{equation}
+
+
+%Also the Size of the matrix $X$ can be decreased by replacing the matrices $B_k$ and $F_k^*$ by their column-wise sums $b_k^\top$ and $f_k^top$. 
+%The matrices $C_k$ and $G_k$ are replaced by their row wise sum $c_k$ and $g_k$.
+%Finally the matrices $A_k$ and $E_k$ are replaced by their elementwise sum $a$ and $c$
+
+
+ 
+
+%possible way to write the 
+%{(u_\alpha,  u_\beta) | u_\alpha \sqcup u_\beta = u_k \}}
+%\begin{align}
+%	u_\alpha,u_\beta &= \underset{(u_\alpha  u_\beta) \in \{(u_\alpha,  u_\beta) | u_\alpha \sqcup u_\beta = u_k \} }{\arg\min}& &\!\! \frac{\|\tilde{H}_\beta\|_\text{F}}{\length(u_\alpha)\length(y_\beta)}
+%	+
+%	\frac{\|\tilde{H}^*_\alpha\|_\text{F}}{\length(u_\beta)\length(y_\alpha)}
+%	+ \lambda(u_\alpha,u_\beta)
+%	\quad
+%	\\
+%	y_\alpha,y_\beta &=  \underset{(y_\alpha  y_\beta) \in \{(y_\alpha,  y_\beta) | y_\alpha \sqcup y_\beta = y_k \} }{\arg\min}& &\!\!
+%	\frac{\|\tilde{H}_\beta\|_\text{F}}{\length(u_\alpha)}
+%	+
+%	\frac{\|\tilde{H}^*_\alpha\|_\text{F}}{\length(u_\beta)}
+%	+ \lambda(y_\alpha,y_\beta)
+%	\quad
+%	.
+%\end{align}
+
+
 
 
 \chapter{Experiments}
 
-\section{Matrix Approximation}
+In this section I test how the algorithms presented in Chapter\,\ref{chap:methods} behave for different matrices.
+To demonstrate the behavior on structured matrices I use random Hankel matrices.
+After this I test the algorithms on weight matrices form the \emph{Mobilenet V2} model \cite{sandler_mobilenetv2_2019} and the \emph{AlexNet} model \cite{krizhevsky_one_2014}.
+When approximating the weight matrices, the goal is to reduce the number of floating point operations.
+The number of floating point operations was described in Section\ref{sec:cost}.
+At the same time the approximation error should stay small.
+To measure the approximation error I use the operator norm of the difference between the matrix $A$ and the approximated matrix $\tilde{A}$.
 
-\paragraph{Illustrative example}
+The code to reproduce the experiments can be found in \todo{Add github}.
+The code uses the library \emph{tvsclib} \cite{kissel_time_2022} to handle the time varyying systems.
+  
+
+\section{Moving Boundaries}
+In this section the approach described in Section\,\ref{sec:Segmentation} is tested.
+Here a initial system with constant input- and output dimensions is first created.
+Then the Segmentation is adapted using Algorithm\,\ref{alg:optimize segemtnation}.
+
+\subsection{Illustrative example}
 First I demonstrate the algorithm for a sequentially semiseparable matrix $A$.
 All Hankel matrices of $A$ are rank one. 
-The matrix is generated form random orthogonal vectors.
-\todo[inline]{eventually move construction to appendix or remove it}
-The blockmatrix $A$ is constructed according to
-\begin{equation}
-	A_{[i,j]} = 
-	\begin{cases}
-	U_{i[:,0]} V_{j[:,0]}^\top & \text{if } i<j\\
-	U_{i[:,1]} V_{j[:,1]}^\top & \text{if } i=j\\
-	U_{i[:,2]} V_{j[:,2]}^\top & \text{if } i>j\\
-	\end{cases}
-\end{equation}
-Here the matrices $U_i \in \mathbb{R}^{p_i\times p_i}$ and $V_i \in \mathbb{R}^{m_i\times m_i}$ are random orthogonal matrices. 
-These are scaled such that $\|U_{i[:,0]}\|_2=p_i$ and $\|V_{i[:,0]}\|_2=m_j$.
+The matrix is generated form random orthogonal vectors such that the range of $C$, $D$ and $G$ are orthogonal to each other.
+Also the range of $B^\top$, $D^\top$ and $G^\top$ are orthogonal.  
+
+%The blockmatrix $A$ is constructed according to
+%\begin{equation}
+%	A_{[i,j]} = 
+%	\begin{cases}
+%	U_{i[:,0]} V_{j[:,0]}^\top & \text{if } i<j\\
+%	U_{i[:,1]} V_{j[:,1]}^\top & \text{if } i=j\\
+%	U_{i[:,2]} V_{j[:,2]}^\top & \text{if } i>j\\
+%	\end{cases}
+%\end{equation}
+%Here the matrices $U_i \in \mathbb{R}^{p_i\times p_i}$ and $V_i \in \mathbb{R}^{m_i\times m_i}$ are random orthogonal matrices. 
+%These are scaled such that $\|U_{i[:,0]}\|_2=p_i$ and $\|V_{i[:,0]}\|_2=m_j$.
 
 Now we want to represent the matrix with a time varying system without using the knowledge about the input and output dimensions.
 
@@ -2486,33 +2604,52 @@ As an objective function I used the normalized nuclear norm as described in Equa
 This gives the system illustrated in Figure\,\ref{fig:example_move_b}.
 We can see that the algorithm can recover the original segmentation.
  
-
+When the algorithm adapts the segmentation, it tests different segmentation and uses the one with the lowest objective function.
+This is done in every iteration. 
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=0.75\textwidth]{Plots/example_move_iterations.pdf}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\label{fig:example_move_bound_a}
+		\caption{Illustration of all possible search paths}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.34\textwidth}
+		\label{fig:example_move_bound_b}
+		\caption{Illustration of the change of the segmentation}
+	\end{subfigure}
 	\caption{Illustration of the change of the segmentation.
 		The blue lines mark the change of the segmentation.
-		The insert on the left shows the search tree for the output segmentation.
 	}
 	\label{fig:example_move_bound}
 \end{figure}
-In Figure\,\ref{fig:example_move_bound} the changing segmentation is illustrated. 
-The segmentation for the different iterations are plotted in blue.
-I used $l = [4,2,1,1]$ as search distances .
-The insert shows the resulting search tree. We can see that in the first iterations the possible changes are larger and decrease for further iterations.
-Also note that the segmentation can be reached with different paths.
-\todo{wording: tree is not actually a tree... but is there a better word}
+The search distance $l_i$ determines which movements of boundaries are tested at every iteration.
+In the first iterations a larger $l_i$ is used. 
+For the later iterations the $l_i$ are smaller.
+I used $l = [4,2,1,1]$ as search distances for this example.
+The left Plot in Figure\,\ref{fig:example_move_bound_a} shows all the positions that are possible at every iteration.
+We can see that in the first iterations the possible changes are larger and decrease for further iterations.
+We can also observe that it is possible to reach the same segmentation using different paths.
+The Figure\,\ref{fig:example_move_bound_b} shows how the segmentation is changing between the iterations. 
 
-The algorithm does not always converge to the original segmentation if the Hankel matricies have a higher rank.
+%The algorithm does not always converge to the original segmentation if the Hankel matricies have a higher rank.
 
-\section{Weight Matrix Approximation}
-Now we try to represent a weight matrix from the \emph{Mobilenet V2} model \cite{sandler_mobilenetv2_2019}.
-The matrix is $A \in \mathbb{R}^{1000 \times 1280}$.
-I use $K = 10$ based on the approximations done in Section\,\ref{sec:Choose_K}.
-As the input and output dimensions are not constant as presumed in Section\,\ref{sec:Choose_K}. I tried different $K$s and adapted the segmentation using Algorithm\,\ref{alg:optimize segemtnation}.
+\subsection{Weight Matrix Approximation}
+Now the algorithm is tested for weight matrices.
+
+
+\paragraph{Mobilenet V2}
+First the a weight matrix from the \emph{Mobilenet V2} model is used.
+The size of the matrix is $A \in \mathbb{R}^{1000 \times 1280}$.
+I set the number of stages to $K = 10$ based on the approximations done in Section\,\ref{sec:Choose_K}.
+In Section\,\ref{sec:Choose_K} the input and output dimensions  presumed to be constant.
+This is not the case for the tested matrices.
+Therefore I also tested other $K$s.
 As the objective function I use the number of multiplications as defined in Equation\,\ref{eq:objective_flop}.
-I use the search sequence $l = \lceil 30 \cdot 1.5^{[0,-1,\dots,-9]} \rceil = [30, 20, 14,  9,  6,  4,  3,  2,  2,  1]$.
-The threshold value is set to $\epsilon = \frac{1}{4} \|A\|_H$, based on the initial segmentation.
+I chose $\epsilon = \frac{1}{4} \|A\|_H$ as the threshold value for which the segmentation is optimized.
+The value of $\|A\|_H$ is calculated using the initial segmentation.
+I use the search sequence $l = [30, 20, 14,  9,  6,  4,  3,  2,  2,  1]$.
+This search sequence also starts with lager search distances, that decrease over time.
+
 \begin{figure}[!htb]
 	%\centering
 	\includegraphics[trim=0.4cm 0.9cm 0 0, clip,width=\textwidth]{Plots/Mobilenet_diff_K.pdf}
@@ -2527,12 +2664,12 @@ The threshold value is set to $\epsilon = \frac{1}{4} \|A\|_H$, based on the ini
 	\end{subfigure}
 	\caption{Matrix segmentation for different numbers of Stages.
 	The areas shaded in gray represent the $D$-matrices.
-	For higher numbers of stages the portion represented by the $D$-Matrices gets lower}
+	For higher numbers of stages the portion represented by the $D_k$-Matrices gets lower.}
 	\label{fig:Mobilenet_diff_Ks}
 \end{figure}
-The results are illustrated in Figure\,\ref{fig:Mobilenet_diff_Ks}.
-Different numbers of stages result in different numbers of multiplications.
-For $K=10$ we get the lowest number of multiplications out of the tested examples.
+The results for $K=5$, $K=10$ and $K =17$ are illustrated in Figure\,\ref{fig:Mobilenet_diff_Ks}.
+The different numbers of stages result in different numbers of multiplications.
+For $K=10$ I get the lowest number of multiplications.
 %First I try $\f_{\text{nuc}}(\Sigma)$ as defined in Equation\,\ref{eq:objective_nuc} as objective function.
 %As search sequence I use $l = [120,  80,  54,  36,  24,  16,  11,   8,   5,   4]$
 %The result is illustrated in Figure\,\ref{fig:mobilenet_seperation_nuc}.
@@ -2556,6 +2693,8 @@ The change of the segmentation for $K=10$ is illustrated in Figure\,\ref{fig:mob
 	}
 	\label{fig:mobilenet_seperation_comp}
 \end{figure}
+On the right the objective function $f_\text{FLOP}(\Sigma)$ is plotted.
+We can see that the number of operation decreases, as the algorithm runs.
 Note that some input and output dimensions vanish. 
 In Figure\,\ref{fig:mobilenet_seperation_comp} this shows as bounds converging to the same point. This also leads to the effect that only a small part of the matrix is represented with the $D$-matrices.
 \begin{figure}[!htb]
@@ -2566,25 +2705,29 @@ In Figure\,\ref{fig:mobilenet_seperation_comp} this shows as bounds converging t
 	}
 	\label{fig:mobilenet_err_cost}
 \end{figure}
-In Figure\,\ref{fig:mobilenet_err_cost} the approximation error $\| A-\tilde{A} \|$ is plotted against the number of multiplications for different approximation parameters $\epsilon$.
-This is done with balanced truncation.
+The resulting system requires more multiplications to compute $y=Au$ as required for a regular matrix vector multiplication.
+Therefor the system complexity is reduced using balanced truncation as described in Section\,\ref{sec:approx}.
+This is done for different approximation parameters $\epsilon$.
+For every $\epsilon$ the number of multiplications and the approximation error $\| A-\tilde{A} \|$ is computed.
+In Figure\,\ref{fig:mobilenet_err_cost} the approximation error is plotted against the number of multiplications for different approximation parameters $\epsilon$.
 The results for the original and the adapted segmentation is shown.
-We can see that the adaptation of the segmentation does not yield big changes.
+%We can see that the adaptation of the segmentation does not yield big changes.
 For the case $\epsilon = \frac{1}{4} \|A\|_H$ we can see that the number of multiplications 
 did decrease by $6\%$ as shown in Figure\,\ref{fig:mobilenet_seperation_comp}.
 The approximation error $\| A-\tilde{A} \|$ did not change due to the adaption of the segmentation.
 
-
-Now we try a weight matrix form the \emph{AlexNet} neural net \cite{krizhevsky_one_2014}.
-This matrix is $A \in \mathbb{R}^{4096 \times 9216}$.
-For this matrix I use $K=15$.
-As the matrix is not wide, I use different search sequences for the inputs and outputs.
-For the output $l =\lceil  120 \cdot  1.4^{[0,-1,\dots,-9]} \rceil =  [120,  86,  62,  44,  32,  23,  16,  12,   9,   6]$.
-And for the input $l =\lceil 270 \cdot 1.4^{[0,-1,\dots,-9]} \rceil=  [270, 193, 138,  99,  71,  51,  36,  26,  19,  14]$.
+\paragraph{AlexNet}
+Now a weight matrix form the \emph{AlexNet} model is represented.
+This size of the matrix is $A \in \mathbb{R}^{4096 \times 9216}$.
+For this matrix I use $K=15$, using the approximation described in Section\,\ref{sec:Choose_K}.
+As the matrix is wide, I use different search distances for the inputs and outputs.
+For the output I use the search distances $l =  [120,  86,  62,  44,  32,  23,  16,  12,   9,   6]$.
+And for the input $l =  [270, 193, 138,  99,  71,  51,  36,  26,  19,  14]$.
 Here the threshold value is again $\epsilon = \frac{1}{4} \|A\|_H$, based on the initial segmentation.
-To speed up the computation, the system is first approximated before adapting the boundaries.
-This is done using balanced truncation with $\epsilon_{\text{apr}}=\frac{1}{2} \epsilon$.
-Here it is important to choose an smaller epsilon for the approximation.
+To speed up the computation, the system is approximated with balanced truncation before the segmentation is adapted.
+This is done using the threshold $\epsilon_{\text{apr}}=\frac{1}{2} \epsilon$.
+Here it is important to choose an smaller $\epsilon$ for the approximation than for the adaptation.
+\todo{information}
 
 \begin{figure}[!htb]
 	\centering
@@ -2594,39 +2737,111 @@ Here it is important to choose an smaller epsilon for the approximation.
 	\label{fig:alexnet_seperation_comp}
 \end{figure}
 Then I adapted the segmentation using Algorithm\,\ref{alg:optimize segemtnation}.
-The result is shown in Figure\,\ref{fig:alexnet_seperation_comp}.
-To avoid approximation errors that got amplified \todo{wording} by changing the input and output dimensions, a new time varying system is  computed based on the new adapted segmentation.
+The systems are again approximated using balanced truncation.
+After moving the bounds the number of multiplications for $\epsilon = \frac{1}{4}\|A\|_\text{H}$ is reduced by \todo{calc}.
+As the adaptation of the segemntation was not performed on the full system, but only on an approximated system, adaptation errors can be amplified.
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=0.7\textwidth]{Plots/move_example_alexnet_error.pdf}
 	\caption{Plot of the approximation error with respect to the number of multiplications for different $\epsilon$. 
-	The black line indicates the number of multiplications for the regular matrix vector product. 
+		The black line indicates the number of multiplications for the regular matrix vector product. 
+		TODO: recomputed,add eps,readability
 	}
 	\label{fig:allexnet_err_cost}
 \end{figure}
-Here we can see that the approximation error increased after applying Algorithm\,\ref{alg:optimize segemtnation}.
+Here in Figure\,\ref{fig:alexnet_seperation_comp} we can see that the approximation error actually increased after applying the Algorithm\,\ref{alg:optimize segemtnation}.
+We can also observe that the approximation error for the adapted system does not vanish for an balanced truncation with $\epsilon = 0$ as the system is based on an already approximated system.
+Therefore a new system is computed. 
+This system has the same input and output dimensions as the adapted system, but is directly calculated form the matrix $A$.
+This system is subsequent approximated using balanced truncation.
 The recomputed system with the new borders has the lowest approximation error.
-The number of multiplications increases slightly for the recomputed system.
-After moving the bounds and recomputing the system the number of multiplications is reduced by $31\%$.
-We can also observe that the approximation error for the adapted system does not vanish for an balanced truncation with $\epsilon = 0$ as the information has been discarded.
-The number with the new segmentation is lower than for initial segmentation if $\epsilon \geq \frac{1}{4} \|A\|_H$.
-The reidentified system has requires an equal or higher number of multiplications if $\epsilon < \frac{1}{4} \|A\|_H$.
-This is due to the fact that in this case the necessary information has been removed before the running Algorithm\,\ref{alg:optimize segemtnation}.
+The number of multiplications increases slightly for the recomputed system compared to the adapted system.
+The number of multiplication is still $31\%$ less compared with the initial system for $\epsilon = \frac{1}{4}\|A\|_\text{H}$.
+For smaller $\epsilon$s  the recomputed system behaves similar to the initial system.
 
+
+%The number with the new segmentation is lower than for initial segmentation if $\epsilon \geq \frac{1}{4} \|A\|_H$.
+%The reidentified system has requires an equal or higher number of multiplications if $\epsilon < \frac{1}{4} \|A\|_H$.
+%This is due to the fact that in this case the necessary information has been removed before the running Algorithm\,\ref{alg:optimize segemtnation}.
+
+\section{Permutations}
+In this section the algorithm described in Section\,\ref{sec:permutation} is tested.
+Here an initial system with one stage is created.
+The stage is than spit up in two stages.
+This process is then repeated.
+When the stages are split, the inputs and outputs are segmented such that a objective function is minimized.
+This makes it possible to recover permuted Sequentially Semiseperable matrices.
+
+\subsection{Illustrative example}
+First the matrix is tested on a Sequential semiseperable matrix.
+\todo[inline]{How detailed description?}
+The rows and columns of the matrix are then permuted with random permutations.
+Then Algorithm\,\ref{alg:split} is used to identify the system.
+The inputs and outputs are segmented 
+
+The result is shown in Figure\,\ref{fig:example_permute}.
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=0.75\textwidth]{Plots/example_permute.pdf}
 	\caption{TODO.
 	}
-	\label{fig:example_move_bound}
+	\label{fig:example_permute}
 \end{figure}
+During the first iteration the algorithm splits the inputs and the outputs in two groups.
+After this, the stage is split into two stages.
+In the second iteration the inputs and outputs of each stage are then again grouped into two subgroups each.
+The algorithm is able to recover the permutation.
+
+\subsection{Weight Matrix Approximation}
+The algorithm is tested on weight matrices.
+These have the property that the Hankel matrices usually have close to full rank. 
+The algorithm to minimize the rank does not perform well.
+Therefore the Frobenius norm is minimized.
+\paragraph{Mobilenet V2}
+Next the algorithm is used to represent a weight matrix from the \emph{Mobilenet V2} model.
+Here the inputs and outputs are segmented such that the Forbenius norm of the Hankel matrices is minimized.
+As the algorithm can only used numbers of stages that are powers of $2$, I use $K=2^3$ as it is closest to $K=10$.
+The regularization parameter is set to $\gamma=9\times10^5$.
+This makes sure, that the inputs and outputs are divided into two equally sized parts.
+The resulting permuted matrix is shown in Figure\,\ref{fig:mobilenet_permutation}.
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.7\textwidth]{Plots/Mobilenet_permute.pdf}
+	\caption{Illustration of permuted weight matrix from \emph{Mobilenet V2} model.
+	}
+	\label{fig:mobilenet_permutation}
+\end{figure}
+As a  reference, a system without permutations is computed.
+The reference system and the permuted system are approximated using balanced truncation.
+We can see in Figure\,\ref{fig:mobilenet_err_cost_perm} that permuting the matrix has only a minor impact on the number of operations and the approximation error.
+For $\epsilon = \frac{1}{4}\|A\|_\text{H}$ the reduction of the computational cost due to the permutation is $<1\%$.
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.7\textwidth]{Plots/perm_example_mobilenet_error.pdf}
+	\caption{Plot of the approximation error with respect to the number of multiplications for different $\epsilon$. 
+		The black line indicates the number of multiplications for the regular matrix vector product. 
+		TODO: regular,add eps,readability
+	}
+	\label{fig:mobilenet_err_cost_perm}
+\end{figure}
+
+\paragraph{Alexnet}
+
 
 
 \chapter{Discussion}
-
-Vanishing  input and output dimensions. Also vanishing $D$-matrices\\
-It is not clear to why this happens.
+Permutation not successful
+mainly changing the Segemntation not reducing the number of states.
+Vanishing  input and output dimensions. Also vanishing $D$-matrices
 It might be interesting to explore time varying systems that do not have $D$-matrices.
+
+Different strategy for clustering
+Approaches in this thesis can help to reduce computational cost.
+Not able to find sequentially semiseperable structures in weight matrices.
+
+
+
 
 
 4-5 4pages
